# tbai

./: .clang-format  .gitignore  .gitmodules  CPPLINT.cfg  Dockerfile  README.md  ruff.toml  tbai  tbai.bash
.github/workflows/: ci.yml
tbai_benchmark/: CMakeLists.txt  README.md  package.xml
tbai_benchmark/src/: helpers.py  main.py  track.py
tbai_blind/: CMakeLists.txt  package.xml
tbai_config/: CMakeLists.txt  package.xml
tbai_config/include/tbai_config/: YamlConfig.hpp
tbai_config/include/tbai_config/implementation/: YamlConfig.hpp
tbai_config/src/: YamlConfig.cpp
tbai_config/test/: testConfig.cpp  test_config.yaml
tbai_context_aware/: CMakeLists.txt  package.xml
tbai_context_aware/config/: default_config.yaml
tbai_context_aware/launch/: simple.launch
tbai_context_aware/src/: simple.cpp
tbai_core/: CMakeLists.txt  package.xml
tbai_core/include/tbai_core/: Asserts.hpp  CentralController.hpp  Controller.hpp  Rotations.hpp  StateSubscriber.hpp  Types.hpp  Utils.hpp
tbai_core/include/tbai_core/config/: YamlConfig.hpp
tbai_core/include/tbai_core/config/implementation/: YamlConfig.hpp
tbai_core/include/tbai_core/control/: CentralController.hpp  Controller.hpp  StateSubscriber.hpp
tbai_core/src/: CentralController.cpp  StateSubscriber.cpp
tbai_core/src/config/: YamlConfig.cpp
tbai_core/src/control/: CentralController.cpp  StateSubscriber.cpp
tbai_description/: CMakeLists.txt  package.xml
tbai_description/urdf/: anymal_d_gazebo.urdf.xacro
tbai_docs/: CMakeLists.txt  package.xml
tbai_docs/tools/doxygen/: Doxyfile.in  style.css
tbai_dtc/: CMakeLists.txt  README.md  package.xml
tbai_dtc/config/: default_config.yaml
tbai_dtc/config/dtc/: task.info
tbai_dtc/include/tbai_dtc/: DtcController.hpp
tbai_dtc/launch/: simple.launch
tbai_dtc/launch/rviz/: dtc.rviz
tbai_dtc/models/: d.pt  dtc_01.pt  dtc_02.pt  dtc_nr3.pt  dtc_nr4.pt  dtc_perceptive_10_new.pt  dtc_perceptive_final.pt  dtc_wbc_jitted.pt  dtc_wbc_jitted_wbc07.pt  dtc_wbc_perceptive.pt  dtc_wbc_perceptive2.pt  dtc_wbc_perceptive3.pt  model_deploy_jitted.pt
tbai_dtc/src/: DtcController.cpp  simple.cpp
tbai_estimation/: CMakeLists.txt  package.xml
tbai_estimation/config/: reference.info
tbai_estimation/include/tbai_estimation/: FromTopicEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h  StateEstimatePublisher.h  StateEstimationBase.h
tbai_estimation/launch/: tbai_estimation.launch
tbai_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp  StateEstimatePublisher.cpp  StateEstimatePublisherNode.cpp  StateEstimationBase.cpp
tbai_gazebo/: CMakeLists.txt  controller_plugins.xaml  controller_plugins.xml  package.xml
tbai_gazebo/include/tbai_gazebo/: ContactSensor.hpp  JointController.hpp  JointStatesContactPublisher.hpp  StatePublisher.hpp
tbai_gazebo/launch/: world.launch
tbai_gazebo/launch/worlds/normal/: normal.world
tbai_gazebo/src/: ContactSensor.cpp  JointController.cpp  JointStatesContactPublisher.cpp  StatePublisher.cpp
tbai_gridmap/: CMakeLists.txt  package.xml
tbai_gridmap/config/: elevation_mapping.yaml  post_processing.yaml
tbai_gridmap/include/tbai_gridmap/: GridmapInterface.hpp
tbai_gridmap/src/: GridmapInterface.cpp
tbai_joe/: CMakeLists.txt  README.md  package.xml
tbai_joe/config/: default_config.yaml
tbai_joe/config/joe/: task.info
tbai_joe/include/tbai_joe/: JoeController.hpp
tbai_joe/launch/: simple.launch
tbai_joe/launch/rviz/: joe.rviz
tbai_joe/models/: joe_08.pt  sjoe.pt
tbai_joe/src/: JoeController.cpp  simple.cpp
tbai_legged_common/: CMakeLists.txt  package.xml
tbai_mpc/: CMakeLists.txt  package.xml
tbai_mpc/config/: convex_plane_decomposition_node.yaml  default_config.yaml  elevation_mapping.yaml
tbai_mpc/include/tbai_mpc/: MpcController.hpp  SqpMpcController.hpp
tbai_mpc/include/tbai_mpc/config/: default_config.yaml
tbai_mpc/include/tbai_mpc/reference/: ReferenceTrajectoryGenerator.hpp
tbai_mpc/include/tbai_mpc/wbc/: Factory.hpp  HqpSolver.hpp  HqpWbc.hpp  SqpSolver.hpp  SqpWbc.hpp  Task.hpp  WbcBase.hpp
tbai_mpc/launch/: simple.launch
tbai_mpc/src/: MpcController.cpp  MpcNode.cpp  simple.cpp
tbai_mpc/src/reference/: ReferenceTrajectoryGenerator.cpp
tbai_mpc/src/utils/: LoadConfig.cpp
tbai_mpc/src/wbc/: Factory.cpp  HqpSolver.cpp  HqpWbc.cpp  SqpSolver.cpp  SqpWbc.cpp  Task.cpp  WbcBase.cpp
tbai_mpc_blind/config/: default_config.yaml
tbai_mpc_blind/launch/: simple.launch
tbai_mpc_perceptive/config/: default_config.yaml
tbai_mpc_perceptive/launch/: simple.launch
tbai_msgs/: CMakeLists.txt
tbai_msgs/msg/: Contacts.msg  JointStates.msg  RbdState.msg  RobotState.msg
tbai_reference/: CMakeLists.txt  package.xml
tbai_reference/src/: ReferenceVelocityGenerator.cpp
tbai_rl/: CMakeLists.txt  package.xml
tbai_rl/config/: default_config.yaml
tbai_rl/include/tbai_rl/: BobController copy.hpp  BobController.hpp  CentralPatternGenerator.hpp  InverseKinematics.hpp  State.hpp  Visualizers.hpp
tbai_rl/launch/: simple.launch
tbai_rl/models/: anymal_model_action12.pt  anymal_model_action12_anymal_c.pt  anymal_model_action12_anymal_d_perceptive.pt  anymal_model_action12_blind.pt  spot_model_action12.pt
tbai_rl/src/: BobController.cpp  CentralPatternGenerator.cpp  InverseKinematics.cpp  Visualizers.cpp  simple.cpp
tbai_rl_blind/: CMakeLists.txt  README.md  package.xml
tbai_rl_blind/config/: default_config.yaml
tbai_rl_blind/launch/: simple.launch
tbai_rl_blind/launch/rviz/: anymal_d.rviz
tbai_rl_blind/src/: simple.cpp
tbai_rl_perceptive/: CMakeLists.txt  README.md  package.xml
tbai_rl_perceptive/config/: default_config.yaml
tbai_rl_perceptive/launch/: simple.launch
tbai_rl_perceptive/launch/rviz/: anymal_d.rviz
tbai_rl_perceptive/src/: simple.cpp
tbai_static/: CMakeLists.txt  README.md  package.xml
tbai_static/config/: default_config.yaml
tbai_static/include/tbai_static/: StaticController.hpp
tbai_static/launch/: simple.launch
tbai_static/src/: StaticController.cpp  simple.cpp
(+5 files in other folders)
