<?xml version="1.0"?>
<package format="2">
  <name>tbai_config</name>
  <version>0.0.0</version>
  <description>The tbai_config package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>