<?xml version="1.0"?>
<package format="2">
  <name>tbai_docs</name>
  <version>0.0.0</version>
  <description>The tbai_docs package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <doc_depend>doxygen</doc_depend>
  <depend>tbai_config</depend>

  <export>
  </export>
</package>