<?xml version="1.0"?>
<package format="2">
  <name>tbai_dtc</name>
  <version>0.0.0</version>
  <description>The tbai_dtc package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_core</depend>
  <depend>tbai_msgs</depend>
  <depend>tbai_static</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_legged_robot</depend>
  <depend>ocs2_legged_robot_ros</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_pinocchio_interface</depend>

  <export>
  </export>
</package>