<?xml version="1.0"?>
<package format="2">
  <name>tbai_gazebo</name>
  <version>0.0.0</version>
  <description>The tbai_gazebo package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tbai_core</depend>
  <depend>tbai_config</depend>
  <depend>tbai_msgs</depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
      <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
  
</package>