<?xml version="1.0"?>
<package format="2">
  <name>tbai_mpc</name>
  <version>0.0.0</version>
  <description>The tbai_mpc package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_msgs</depend>
  <depend>ocs2_ros_interfaces</depend>

  <export>
  </export>
</package>