<?xml version="1.0"?>
<package format="2">
  <name>tbai_rl_perceptive</name>
  <version>0.0.0</version>
  <description>The tbai_rl_perceptive package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_core</depend>
  <depend>tbai_static</depend>
  <depend>tbai_rl</depend>

  <export>
  </export>
</package>